clover: Use context device list for error checking in clGetProgramBuildInfo.

Fixes https://bugs.freedesktop.org/show_bug.cgi?id=70891.

Reported-by: Bruno Jiménez <brunojimen@gmail.com>